--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@ ___Under construction___
 I will gradually fill this page with links to my projects/ideas/hobbies/thoughts/"about me".
 
 * Accelcurve https://nikita-landwalker.itch.io/accelcurve - My first downloadable game (Windows). Made in 2d. 
+
+
 * Thue - My string substitution turing complete language implementation in Javascript. Very slow, but cool.
-* Last year i tried to make a 3d rendering in 2d framework. I have couple videos about that programming journey, short and long. When i saw an addon for "Garry's mod" called "LIDAR", i challenged myself to make a similar thing and made another version of the program: Lidar programming challenge. https://youtu.be/1QWyA5mqaG8
+
+
+* Last year i tried to make a 3d rendering in 2d framework. 
+I have couple videos about that programming journey, short and long. 
+When i saw an addon for "Garry's mod" called "LIDAR", 
+i challenged myself to make a similar thing and made another version of the program: 
+Lidar programming challenge. https://youtu.be/1QWyA5mqaG8
+
 * I have a youtube. It is not themed, just a personal page. https://www.youtube.com/channel/UCmogttVr_1kuTVPJB5chN5g
 * Came up with a new chess variant "Heavy chess". 8 pawns, 4 knights, 4 bishops, 4 rooks, 3 queens, 1 king. Pawns are placed on the third row, king is placed randomly on the first row, other pieces randomly fill the left space. To make playing easier created a heavy chess position generator for Lichess - couple clicks and you can challenge your friend.
+* Nexus chess
+* Defcon Chess
 
+
+Random achievements
+
+Climbing 7A x2
+
+link to recommendations
 
 </body>
 </html>
