links for chess

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ Lidar programming challenge. https://youtu.be/1QWyA5mqaG8
 
 * I have a youtube. It is not themed, just a personal page. https://www.youtube.com/channel/UCmogttVr_1kuTVPJB5chN5g
 * Came up with a new chess variant "Heavy chess". 8 pawns, 4 knights, 4 bishops, 4 rooks, 3 queens, 1 king. Pawns are placed on the third row, king is placed randomly on the first row, other pieces randomly fill the left space. To make playing easier created a heavy chess position generator for Lichess - couple clicks and you can challenge your friend.
-* Nexus chess
-* Defcon Chess
+* Nexus chess https://nikita-babich.github.io/nexus_chess/
+* Defcon Chess https://www.lesswrong.com/posts/an94WN44DJchwxzeD?commentId=r9TGhwXczGAdCtWBR
 
 
 Random achievements
