--- a/index.html
+++ b/index.html
@@ -4,20 +4,31 @@
 <h1>___Under construction___</h1>
 I will gradually fill this page with links to my projects/ideas/hobbies/thoughts/"about me".
 
-<div>Accelcurve https://nikita-landwalker.itch.io/accelcurve - My first downloadable game (Windows). Made in 2d. </div>
+<div>
+    Accelcurve https://nikita-landwalker.itch.io/accelcurve - My first downloadable game (Windows). Made in 2d. 
+</div>
 
 
-<div>* Thue - My string substitution turing complete language implementation in Javascript. Very slow, but cool.</div>
+<div>
+    * Thue - My string substitution turing complete language implementation in Javascript. Very slow, but cool.
+</div>
 
 
-<div>3d rendering in 2d framework. 
+<div>
+    3d rendering in 2d framework. 
 I have couple videos about that programming journey, short and long. 
 When i saw an addon for "Garry's mod" called "LIDAR", 
 i challenged myself to make a similar thing and made another version of the program: 
-Lidar programming challenge. https://youtu.be/1QWyA5mqaG8</div>
+Lidar programming challenge. https://youtu.be/1QWyA5mqaG8
+</div>
+
+<div>
+    * I have a youtube. It is not themed, just a personal page. https://www.youtube.com/channel/UCmogttVr_1kuTVPJB5chN5g
+    <br>
+</div>
 
 
-* I have a youtube. It is not themed, just a personal page. https://www.youtube.com/channel/UCmogttVr_1kuTVPJB5chN5g
+
 * Came up with a new chess variant "Heavy chess". 8 pawns, 4 knights, 4 bishops, 4 rooks, 3 queens, 1 king. Pawns are placed on the third row, king is placed randomly on the first row, other pieces randomly fill the left space. To make playing easier created a heavy chess position generator for Lichess - couple clicks and you can challenge your friend.
 * Nexus chess https://nikita-babich.github.io/nexus_chess/
 * Defcon Chess https://www.lesswrong.com/posts/an94WN44DJchwxzeD?commentId=r9TGhwXczGAdCtWBR
