--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ Lidar programming challenge. https://youtu.be/1QWyA5mqaG8
     <br>
 </div>
 
+Project euler https://projecteuler.net/profile/Nikita_Babich.png
+Janestreet puzzles 
 
 
 * Came up with a new chess variant "Heavy chess". 8 pawns, 4 knights, 4 bishops, 4 rooks, 3 queens, 1 king. Pawns are placed on the third row, king is placed randomly on the first row, other pieces randomly fill the left space. To make playing easier created a heavy chess position generator for Lichess - couple clicks and you can challenge your friend.
